chore: add Code of Conduct and Security Policy, enhance documentation
- Introduced CODE_OF_CONDUCT.md to establish community guidelines for project participation.
- Added SECURITY.md to outline the security policy, supported versions, and vulnerability reporting process.
- Updated CONTRIBUTING.md to include clearer rules and testing requirements.
- Enhanced README.md with additional details on API methods and error handling.
- Improved documentation across various files for better clarity and usability.

--- a/package.json
+++ b/package.json
@@ -46,8 +46,12 @@
   },
   "keywords": [
     "better-auth",
+    "better-auth-plugin",
     "telegram",
+    "telegram-login",
+    "telegram-mini-apps",
     "authentication",
+    "oauth",
     "plugin",
     "typescript"
   ],
